Swagger for checkout
